fix header on small size

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1218,3 +1218,14 @@ footer {
 .invisible {
   display: none;
 }
+
+@media only screen and (max-width: 320px) {
+  .o-header-services .o-header-services__bleed-container {
+    padding: 0 5px;
+  }
+
+  .o-header-services .o-header-services__title {
+    padding-left: 0;
+    padding-right: 5px;
+  }
+}
